[package]
name = "pdflib-sys"
version = "0.1.0"
authors = ["Hroi Sigurdsson <hroi@asdf.dk>"]
edition = "2018"
links = "pdf"
categories = ["external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = { version = "0.54.0", default-features = false }

[dependencies]
libc = "0.2.70"
